# Al-Warraq

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  results.txt
.github/ISSUE_TEMPLATE/: config.yml  epic.yml  story.yml
.github/workflows/: publish.yml  tests.yml
al_warraq/: __init__.py  book.py  classify.py  cli.py  content.py  content_store.py  epub.py  exceptions.py  hooks.py  library.py  opf.py  output.py  processing.py  search.py  storage.py  toc.py
al_warraq/tui/: __init__.py  app.py  commands.py  history.py  library.py  widgets.py
docs/: API.md  CLI.md  EXAMPLES.md  benchmark.md  quick_wins.md
docs/branding/: README.md
docs/branding/masters/: design-lab.html
epubsage/: __init__.py  classify.py  cli.py  epub.py  exceptions.py  nav.py  ncx.py  opf.py  storage.py
tests/: test_book.py  test_cli.py  test_content_extraction.py  test_content_store.py  test_dispatch.py  test_extract_cache.py  test_library.py  test_parsers.py  test_processing.py  test_search.py  test_storage.py  test_tui.py  test_tui_commands.py  test_tui_history.py  test_tui_library.py
