[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Al-Warraq"
version = "1.0.0"
description = "Al-Warraq (الورّاق) — lightweight EPUB inspection: version detection, TOC discovery, content extraction, and BM25 search."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Abdullah Wex", email = "alshreef15xm@gmail.com"}
]
keywords = ["epub", "ebook", "parser", "metadata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "markdownify>=0.14.1",
    "typer>=0.12.0",
]

[project.scripts]
al-warraq = "al_warraq.cli:cli_entry"

[project.optional-dependencies]
minio = ["minio>=7.2.0"]

[project.urls]
Homepage = "https://github.com/Abdullah-Wex/Al-Warraq"
Repository = "https://github.com/Abdullah-Wex/Al-Warraq"
Documentation = "https://github.com/Abdullah-Wex/Al-Warraq#readme"
Issues = "https://github.com/Abdullah-Wex/Al-Warraq/issues"
Changelog = "https://github.com/Abdullah-Wex/Al-Warraq/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
]

[tool.hatch.build]
packages = ["al_warraq"]

[tool.hatch.build.targets.sdist]
include = ["/al_warraq", "/README.md", "/LICENSE", "/pyproject.toml", "/CHANGELOG.md"]

[tool.hatch.build.targets.wheel]
packages = ["al_warraq"]
